--- a/app/src/main/res/layout/activity_logined.xml
+++ b/app/src/main/res/layout/activity_logined.xml
@@ -11,7 +11,7 @@
         android:id="@+id/iv_bottle"
         android:layout_width="357dp"
         android:layout_height="274dp"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="120dp"
         app:layout_constraintBottom_toTopOf="@+id/tv_nick"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,32 +22,34 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="104dp"
+        android:layout_marginTop="115dp"
         android:text="환영합니다!"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="@color/white"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:textColor="@color/white"
-        android:textStyle="bold"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_point"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="13dp"
         android:text="총 포인트 2100 point"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textColor="@color/white"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_nick"
-        android:textColor="@color/white"
-        android:textStyle="bold"/>
+        app:layout_constraintTop_toBottomOf="@+id/tv_nick" />
 
     <Button
         android:id="@+id/btn_qr_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="250dp"
+        android:layout_marginStart="234dp"
+        android:layout_marginTop="16dp"
         android:backgroundTint="#FFFFFF"
         android:text="QR 로그인"
         android:textColor="#03958D"
@@ -78,12 +80,13 @@
         android:id="@+id/tv_nick"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         android:text="닉네임님"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textColor="@color/white"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/tv_point"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_bottle"
-        android:textColor="@color/white"
-        android:textStyle="bold"/>
+        app:layout_constraintTop_toBottomOf="@+id/iv_bottle" />
 </androidx.constraintlayout.widget.ConstraintLayout>
