--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -12,6 +12,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="180dp"
+        android:layout_marginEnd="40dp"
         android:ems="10"
         android:inputType="phone"
         app:layout_constraintBottom_toTopOf="@+id/edt_join_nick"
@@ -23,6 +24,7 @@
         android:id="@+id/edt_join_nick"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="40dp"
         android:ems="10"
         android:inputType="text"
         app:layout_constraintBottom_toTopOf="@+id/edt_join_pass"
@@ -34,6 +36,7 @@
         android:id="@+id/edt_join_pass"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="40dp"
         android:ems="10"
         android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
@@ -45,6 +48,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
         android:text="아이디"
         app:layout_constraintBaseline_toBaselineOf="@+id/edt_join_id"
         app:layout_constraintEnd_toStartOf="@+id/edt_join_id"
@@ -54,6 +58,7 @@
         android:id="@+id/tv_bottle_kind"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
         android:text="닉네임"
         app:layout_constraintBaseline_toBaselineOf="@+id/edt_join_nick"
         app:layout_constraintEnd_toStartOf="@+id/edt_join_nick"
@@ -63,6 +68,7 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
         android:text="비밀번호"
         app:layout_constraintBaseline_toBaselineOf="@+id/edt_join_pass"
         app:layout_constraintEnd_toStartOf="@+id/edt_join_pass"
@@ -104,9 +110,9 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:text="회원가입"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
         android:textColor="@color/white"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/edt_join_id"
